# sfdutf7.py

./: LICENSE.txt  README.md  setup.cfg  setup.py
sfdutf7/: __init__.py  __main__.py  xmlvalid.py
tests/: test_sfdutf7.py
