[metadata]
name = sfdutf7
version = 0.1.0
author = Fredrick Brennan
author_email = copypaste@kittens.ph
description = SFDUTF7 encoding parsing library
url = https://github.com/ctrlcctrlv/sfdutf7.py
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts = sfdutf7 = sfdutf7.__main__:main
